Replace some blocking calls with async versions, still in testing if this works flawlessly but time improvement is there so far